--- a/.theia/launch.json
+++ b/.theia/launch.json
@@ -1,6 +1,19 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
   "version": "0.2.0",
-  "configurations": []
+  "configurations": [
+    {
+      "type": "php",
+      "name": "Launch",
+      "request": "launch",
+    //   "port": 8001,
+      "stopOnEntry": true,
+    //   "program": "${file}",
+    //   "program": "${workspaceRoot}",
+    //   "cwd": "${workspaceRoot}",
+    //   "externalConsole": false
+        "pathMappings": {
+        "${workspaceRoot}": "${workspaceRoot}"
+    },
+    }
+  ]
 }
