--- a/.theia/launch.json
+++ b/.theia/launch.json
@@ -6,7 +6,7 @@
         "name": "Launch",
         "request": "launch",
         "port": 9000,
-        "stopOnEntry": true,
+        // "stopOnEntry": true,
         //   "program": "${file}",
         //   "program": "${workspaceRoot}",
         //   "cwd": "${workspaceRoot}",
