--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -12,4 +12,4 @@ vscode:
     - felixfbecker.php-debug@1.13.0:WX8Y3EpQk3zgahy41yJtNQ==
 tasks:
   - init: bash .gitpod-init.sh
-    command: cd src && php artisan serve
+    command: cd src && php artisan serve --host=0.0.0.0
