--- a/src/package.json
+++ b/src/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "axios": "^0.19",
-        "bootstrap": "^4.5.0",
+        "bootstrap": "^4.5.2",
         "cross-env": "^7.0",
         "jquery": "^3.5",
         "laravel-mix": "^5.0.4",
@@ -26,6 +26,7 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
+        "bootstrap-vue": "^2.16.0",
         "devtools": "^6.1.25",
         "moment": "^2.27.0",
         "moment-timezone": "^0.5.31",
