- welcomeページ作成 - ログイン、登録をメールアドレスではなくユーザ名に変更	2c73059	Takahiko Kawakami <takahiko.kawakami@smaregi.jp>	2020/09/26 23:33 - モーダルデザイン修正、日付等の機能は後おくり（datepickerは導入済） - タイマー機能を拡張、マイナスもカウントできるようにした - vue-burger-naviを使用 - ログイン、新規登録画面を修正 - 新規登録不備を修正 - TODO: refresh token	9d749bc	Takahiko Kawakami <takahiko.kawakami@smaregi.jp>	2020/09/25 9:04 - 並び替え機能実装（TODO：ticketのDBからdisplay_sequence削除） - DIの修正 - tag機能の準備	1d22305	Takahiko Kawakami <takahiko.kawakami@smaregi.jp>	2020/09/25 9:02 storeのurl修正	a84e30d	Takahiko Kawakami <takahiko.kawakami@smaregi.jp>	2020/09/25 8:58 docker修正	7b1db83	Takahiko Kawakami <takahiko.kawakami@smaregi.jp>	2020/09/25 8:57 不要なファイル削除、docker設定	79cb54e	Takahiko Kawakami <takahiko.kawakami@smaregi.jp>	2020/09/24 9:05

--- a/src/package.json
+++ b/src/package.json
@@ -30,7 +30,12 @@
         "devtools": "^6.1.25",
         "moment": "^2.27.0",
         "moment-timezone": "^0.5.31",
+        "vue-burger-menu": "^2.0.5",
+        "vue-cookies": "^1.7.4",
+        "vue-hotel-datepicker": "^4.0.0-beta.9",
         "vue-loader": "^15.9.3",
-        "vue-router": "^3.4.3"
+        "vue-router": "^3.4.3",
+        "vuedraggable": "^2.24.1",
+        "vuejs-datepicker": "^1.6.2"
     }
 }
